--- a/spatialR.Rmd
+++ b/spatialR.Rmd
@@ -111,7 +111,7 @@ h1.title {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 25vh;
+  margin-top: 100vh;
   padding-top: 40px;
   padding-bottom: 20px;
   color: DarkGreen;
@@ -326,7 +326,6 @@ lon <- rnorm(100, mean = 72, sd = 0.1)
 
 ```
 
-<!--
 
 ### -- Solution --
 
@@ -357,8 +356,6 @@ mapview(cef)
 
 ```
 
-
--->
 
 <br>
 
@@ -532,7 +529,6 @@ The EPSG code 4326 is equivalent to giving the `"+proj=longlat +datum=WGS84 +ell
 
 Get some occurrences for the monarch butterfly (*Danaus plexippus*) using rgbif and the `occ_search` function and plot them for Quebec using the `gadm` function from the geodata package. Use the UTM zone 18N CRS.
 
-<!--
 
 ### -- Solution --
 
@@ -558,8 +554,6 @@ plot(st_geometry(qc))
 plot(st_geometry(monarchs), add = TRUE)
 
 ```
-
--->
 
 <!--
 ```{r Ex2, include = FALSE, eval = FALSE, include = FALSE}
@@ -1063,7 +1057,7 @@ plot(h, col = "green4", border = NA, axes = TRUE)
 
 ```
 
-<!-- ### -- Solution -- 
+### -- Solution -- 
 
 ```{r ex0sol, echo=TRUE, include=TRUE, tidy=FALSE, out.width = "60%"}
 
@@ -1091,7 +1085,6 @@ text(st_coordinates(st_centroid(b)), label = round(perc, 2), cex = 0.7)
 
 ```
 
--->
 
 # RASTERS (terra)
 
